# training_18-06-25

./: .gitignore
dev/: Makefile  build.bat  build_all.sh  ws.bat
dev/src/: CMakeLists.txt
dev/src/E0_ValRef/: CMakeLists.txt
dev/src/E0_ValRef/src/: CopyCounter.hxx  ValRef.cpp
dev/src/E10_List/: CMakeLists.txt
dev/src/E10_List/src/: List.cpp
dev/src/E11_Lambda/: CMakeLists.txt
dev/src/E11_Lambda/src/: Lambda.cpp
dev/src/E12_Future/: CMakeLists.txt
dev/src/E12_Future/src/: Future.cpp
dev/src/E13_Promise/: CMakeLists.txt
dev/src/E13_Promise/src/: Promise.cpp
dev/src/E14_ThreadTask/: CMakeLists.txt
dev/src/E14_ThreadTask/src/: ThreadTask.cpp
dev/src/E15_Atomic/: CMakeLists.txt
dev/src/E15_Atomic/src/: Atomic.cpp
dev/src/E16_StreamOp/: CMakeLists.txt
dev/src/E17_SpinLock/: CMakeLists.txt
dev/src/E17_SpinLock/src/: SpinLock.cpp
dev/src/E1_RValue/: CMakeLists.txt
dev/src/E1_RValue/src/: CopyCounter.hxx  RValue.cpp
dev/src/E2_PerfFor/: CMakeLists.txt
dev/src/E2_PerfFor/src/: PerfFor.cpp
dev/src/E3_RetValOpt/: CMakeLists.txt
dev/src/E3_RetValOpt/src/: RetValOpt.cpp
dev/src/E4_TypeDeduction/: CMakeLists.txt
dev/src/E4_TypeDeduction/src/: TypeDeduction.cpp
dev/src/E5_UniquePtr/: CMakeLists.txt
dev/src/E5_UniquePtr/src/: UniquePtr.cpp
dev/src/E6_SharedPtr/: CMakeLists.txt
dev/src/E6_SharedPtr/src/: SharedPtr.cpp
dev/src/E7_WeakPtr/: CMakeLists.txt
dev/src/E7_WeakPtr/src/: WeakPtr.cpp
dev/src/E8_Array/: CMakeLists.txt
dev/src/E8_Array/src/: Array.cpp
dev/src/E9_Vector/: CMakeLists.txt
dev/src/E9_Vector/src/: Vector.cpp
dev/src/pmeas/: CMakeLists.txt
dev/src/pmeas/include/pmeas/: RuntimeMeasurement.h  RuntimeTimer.h
dev/src/pmeas/test/: RuntimeMeasurement_test.cpp  RuntimeTimer_test.cpp
